<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sisifus.praetorian.Acitivity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/menu_paginainicial" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sisifus.praetorian.Acitivity.ui.Glicose.InjetaveisFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_injetaveis" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sisifus.praetorian.Acitivity.ui.Medicamentos.MedicamentosFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_medicamentos" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.sisifus.praetorian.Acitivity.ui.PressaoArterial.pressaoArterialFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_pressaoarterial" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.sisifus.praetorian.Acitivity.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.sisifus.praetorian.Acitivity.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>