<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_fundo"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.sisifus.praetorian.Acitivity.CadastroUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caesar"
                android:text="@string/texto_cadastro"
                android:textAlignment="center"
                android:textSize="35sp" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/nomeid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/cadastro_nome"
                        android:inputType="textPersonName"
                        app:bootstrapBrand="info"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />


                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/emailcadastroid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/Hint_cadastroemail"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/bootstrap_brand_secondary_text"
                        app:bootstrapBrand="info"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/senhacadastroid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/Hint_senha"
                        android:inputType="textPassword"
                        android:textColor="@color/bootstrap_brand_secondary_text"
                        app:bootstrapBrand="info"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/repsenhacadastroid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/Hint_resenha"
                        android:inputType="textPassword"
                        android:textColor="@color/bootstrap_brand_secondary_text"
                        app:bootstrapBrand="info"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btncadastroid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btn_cadastro"
                app:bootstrapBrand="warning"
                app:bootstrapSize="md"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/voltarcadasid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btnvoltar_cadastro"
                app:bootstrapBrand="primary"
                app:bootstrapSize="md"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>