<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acitivity.ApontamentoActivity"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_medicao" />

    <TextView
        android:id="@+id/adataApont"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="-68dp"
                android:text="@string/hora_medicao" />

            <TextView
                android:id="@+id/aHoraApont"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginStart="190dp"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:textSize="30sp" />


            <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/texto_insulina" />


                <EditText
                    android:id="@+id/edtinsulinaid"
                    android:ems="10"
                    android:layout_width="120dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />




    <TextView
        android:id="@+id/textView5"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="-45dp"
        android:gravity="center"
        android:text="@string/imput_insulina"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_pressão" />

    <EditText
        android:id="@+id/edtpressao1id"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-45dp"
        android:gravity="center"
        android:text="@string/imput_pressao"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_batimentos_view" />

    <EditText
        android:id="@+id/edtbatimento"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-46dp"
        android:gravity="center"
        android:text="@string/imput_batimento"
        android:textSize="25sp"
        android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Check de medicação" />

            <Button
                android:id="@+id/btnsalvarMedicacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Dar medicação" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/checkMedicacaoTV" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Observação" />

            <EditText
                android:id="@+id/edtobservação"
                android:layout_width="match_parent"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtUsuario"
                android:textSize="16dp"
                android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnsalcarapont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="Salvar" />

        <Button
        android:id="@+id/btncacnelarApont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Cancelar" />

        </LinearLayout>
    </ScrollView>




</LinearLayout>